<resources>
    <string name="app_name">BeeLa!</string>
    <string name="login">Entrar</string>
    <string name="criar_conta">Criar conta</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="pedirEmail">Para prosseguir, digite seu e-mail:</string>
    <string name="pedirSenha">Finalmente, defina sua senha:</string>
    <string name="pedirNome">Primeiro, digite seu nome:</string>
    <string name="pedirData">Digite sua data de nascimento:</string>
    <string name="pedirGenero">Agora, digite seu gênero:</string>
    <string name="continuar">Continuar</string>
    <string name="bemvindo">Bem-vindo!</string>
    <string name="novoPerfil">Criar perfil</string>
    <string name="Perfil">Perfil</string>
    <string name="pedirNomePerfil">Digite um nome para o seu perfil: </string>
    <string name="pedirSelecionarCategorias">Selecione uma categoria:</string>
    <string name="AdicionarInteresses">Adicionar interesses</string>
    <string name="CriarPerfil">Criar perfil</string>
    <string name="MostrarInteressesAtuais">Interesses atuais</string>
    <string name="AdicionarInteressesVisualizar">Adicionar interesses</string>
    <string name="AlterarPerfil">Alterar perfil</string>
    <string name="Grupos">Grupos</string>
    <string name="Configurações">Configurações</string>
    <string name="CategoriaComida">Comida</string>
    <string name="CategoriaMusica">Música</string>
    <string name="CategoriaEsporte">Esporte</string>
    <string name="CategoriaLugar">Lugar</string>

    <string name="EspecificaçaoMusica">Música</string>
    <string name="EspecificaçãoForro">Forró</string>
    <string name="EspecificaçãoSamba">Samba</string>
    <string name="EspecificaçãoFunk">Funk</string>
    <string name="EspecificaçãoSertanejo">Sertanejo</string>
    <string name="EspecificaçãoAxé">Axé</string>
    <string name="EspecificaçãoRock">Rock</string>
    <string name="EspecificaçãoEletrônica">Eletrônica</string>
    <string name="EspecificaçãoMúsicaOutro">Outro</string>

    <string name="EspecificaçãoComida">Comida</string>
    <string name="EspecificaçãoVegetariana">Vegetariana</string>
    <string name="EspecificaçãoMassa">Massa</string>
    <string name="EspecificaçãoJaponesa">Japonesa</string>
    <string name="EspecificaçãoItaliana">Italiana</string>
    <string name="EspecificaçãoDoce">Doce</string>
    <string name="EspecificaçãoMexicana">Mexicana</string>
    <string name="EspecificaçãoComidaOutro">Outro</string>
    <string name="EspecificaçãoNordestina">Nordestina</string>
    <string name="nav_Home">Home</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_conf">Configurações</string>

    <string name="EspecificaçãoNatação">Natação</string>
    <string name="EspecificaçãoAcademia">Academia</string>
    <string name="EspecificaçãoFutebol">Futebol</string>
    <string name="EspecificaçãoCaminhada">Caminhada</string>
    <string name="EspecificaçãoSurf">Surf</string>
    <string name="EspecificaçãoArtesMarciais">Artes Marciais</string>
    <string name="EspecificaçãoSkate">Skate</string>
    <string name="EspecificaçãoEsporteOutro">Outro</string>

    <string name="EspecificaçãoShopping">Shopping</string>
    <string name="EspecificaçãoPraia">Praia</string>
    <string name="EspecificaçãoParqueDiversões">Parque Diversões</string>
    <string name="EspecificaçãoIgreja">Igreja</string>
    <string name="EspecificaçãoBalada">Balada</string>
    <string name="EspecificaçãoCinema">Cinema</string>
    <string name="EspecificaçãoClube">Clube</string>
    <string name="EspecificaçãoLugarOutro">Outro</string>

    <string name="adicionarInteresse">Adicionar interesse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="IgrejaCarmo">Igreja do Carmo</string>
    <string name="IgrejaDescricao">Igreja Descrição</string>
    <string name="Shoping">Shoping Rio Mar</string>
    <string name="ShopingDescricao">Shoping Descrição</string>
    <string name="Clube">Clube Náutico</string>
    <string name="ClubeDescricao">Clube Descrição</string>
    <string name="Praia">Praia de Piedade</string>
    <string name="PraiaDescricao">Praia Descrição</string>
    <string name="Parque">Parque Mirabilândia</string>
    <string name="ParqueDescricao">Parque Descrição</string>
    <string name="Balada">Balada Porto Music</string>
    <string name="BaladaDescricao">Balada Descrição</string>
    <string name="Cinema">Cinema São Luiz</string>
    <string name="CinemaDescricao">Cinema Descrição</string>

    <string name="Natação">Academia Anitta</string>
    <string name="NataçãoDescrição">Natação Descrição</string>
    <string name="Futebol">Winner</string>
    <string name="FutebolDescrição">Futebol Descrição</string>
    <string name="Surf">Argo Surf</string>
    <string name="SurfDescrição">Argo Descrição</string>
    <string name="ArtesMarciais">CTCMMA artes Marciais</string>
    <string name="ArtesMarciaisDescrição">Artes Marciais Descrição</string>
    <string name="Skate">Click Skate</string>
    <string name="SkateDescrição">Skate Descrição</string>
    <string name="Academia">HI Academia</string>
    <string name="AcademiaDescrição">Academia Descrição</string>
    <string name="Caminhada">Parque Jaqueira</string>
    <string name="CaminhadaDescrição">Caminhada Descrição</string>

    <string name="Vegetariana"> Pote Vegano</string>
    <string name="VegetarianaDescrição">Vegetariana Descrição</string>
    <string name="Doce">Simone Barros</string>
    <string name="DoceDescrição">Doce Descrição</string>
    <string name="Japonesa">Chinna inbox</string>
    <string name="JaponesaDescrição">Japonesa Descrição</string>
    <string name="Italiana">Cantina Italiana</string>
    <string name="ItalianaDescrição">Italiana Descrição</string>
    <string name="Mexicana">Taco a Taco</string>
    <string name="MexicanaDescrição">Mexicana Descriçaõ</string>
    <string name="Massa">Pizzaria Atlântico</string>
    <string name="MassaDescrição">Massa Descrição</string>
    <string name="Nordestina">Xodó Nordestino</string>
    <string name="NordestinaDescrição">Nordestina Descrição</string>

    <string name="Samba">Samba da Moeda</string>
    <string name="SambaDescrição">Samba Descrição</string>
    <string name="Forró">Casa do Forró</string>
    <string name="ForróDescrição">Forró Descrição</string>
    <string name="Funk">Explode Funk</string>
    <string name="FunkDescrição">Funk Descrição</string>
    <string name="Sertanejo">Empório Sertanejo</string>
    <string name="SertanejoDescrição">Sertanejo Descrição</string>
    <string name="Axé">Casa do Axé</string>
    <string name="AxeDescrição">Axé Descrição</string>
    <string name="Rock">Rock Ribs</string>
    <string name="RockDescrição">Rock Descrição</string>
    <string name="Eletrônica">Many Deck Bar</string>
    <string name="EletronicaDescrição">Eletrônica Descrição</string>


</resources>
